--- a/package.json
+++ b/package.json
@@ -4,20 +4,39 @@
   "description": "Aprendendo a desenvolver um CRUD com qualidade",
   "main": "index.js",
   "scripts": {
+    "start": "next start",
     "start:crud": "npx ts-node ./core/crud.ts",
+    "dev": "next dev",
     "dev:crud": "nodemon --ext ts,tsx --exec 'npm run start:crud'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "next build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint './**/*.{jsx,jsx,ts,tsx}'",
+    "lint:fix": "npm run lint -- --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.10.5",
+    "@types/react": "18.2.46",
     "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "eslint": "^8.36.0",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.7"
   },
   "dependencies": {
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "uuid": "^9.0.1"
   }
 }
